@@ -51,10 +51,23 @@ READABLE(kpathsea kpse, const_string fn, unsigned int st)
   Windows, if it really exists and input name is given in
   full-absolute path in a command line.
   /../, /./, \..\, \.\ should be excluded (2020/06/06)
+  More than one directory separators should be excluded. (2020/10/24)
 */
   p = strstr(fn, ".\\");
   if (!p) {
     p = strstr(fn, "./");
+  }
+  if (!p && len > 2) {
+    p = strstr(fn + 2, "//");
+  }
+  if (!p && len > 2) {
+    p = strstr(fn + 2, "\\\\");
+  }
+  if (!p && len > 2) {
+    p = strstr(fn + 2, "\\/");
+  }
+  if (!p && len > 2) {
+    p = strstr(fn + 2, "/\\");
   }
   if (!p && len > 2 && ((fn[0] == '/' && fn[1] == '/') ||
       (fn[0] == '\\' && fn[1] == '\\' && fn[2] != '?'))) {
